2014-05-07  Klaus Kaempf <kkaempf@suse.de>

	* ipmipower/ipmipower_ping.c: Fix compile bug.
	
2014-03-19  Albert Chu <chu11@llnl.gov>

	* ipmipower/: Support 'ipmiping' workaround.
	
2014-03-19  David Binderman <dcb314@hotmail.com>
	
	* libfreeipmi/interpret/ipmi-interpret.c: Fix leap before you look
	bugs.
	
2014-03-13  Albert Chu <chu11@llnl.gov>

	* ipmi-oem/: Support Supermicro get-power-supply-status
	and get-pmbus-power-supply-status commands.
	
2014-03-12  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-faq.texi: Add notes on ipmi-detect for IPMI
	discovery.
	
2014-02-21  Albert Chu <chu11@llnl.gov>

	* libipmiconsole/ipmiconsole_processing.c (_sol_retransmission_timeout):
	Only increment sol packet sequence number for workaround once.
	 
2014-02-20  Albert Chu <chu11@llnl.gov>

	* libipmiconsole, ipmiconsole, common/parsecommon: Support
	SERIAL_ALERTS_DEFERRED workaround.  Support
	INCREMENT_SOL_PACKET_SEQUENCE workaround.

2014-02-20  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/templates/ipmi-rmcpplus-support-and-payload-cmds-templates.h,
	libfreeipmi/cmds/ipmi-rmcpplus-support-and-payload-cmds.c: Fix
	payload, two fields were flipped by accident.  Make fields required and not optional.
	
2014-02-06  Albert Chu <chu11@llnl.gov>

	* Porting issues discovered by guy here

	http://theviewfrom8.blogspot.com/2012/11/how-to-build-freeipmi-on-mac-os-x.html

	basic code derived from his webpage.

	* libfreeipmi/driver/ipmi-semaphores.h: Union semun defined in
	sys/sem.h for FreeBSD and APPLE.
	
	* configure.ac, common/toolcommon/pstdout.c,
	common/toolcommon/tool-daemon-common.h: sighandler_t not defined
	in signal.h, handled appropriately.
	
2014-01-27  Anonymous

	* man/Makefile.am: Fix man pages built with cpp-4.8
	
2014-01-15  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/sel/, libfreeipmi/include/freeipmi/spec/, Support
	OEM events for Intel Windmill motherboards in ipmi-sel.

	* freeipmi/record-format/ipmi-sel-oem-record-format.h: New file
